# my-llm-twin

./: .gitignore  Makefile  README.md  docker-compose.yml  docker-compose_stale.yml  pyproject.toml
.docker/: Dockerfile.bytewax  Dockerfile.cdc  Dockerfile.crawlers
configs/: digital_data_etl_maxime_labonne.yaml  digital_data_etl_paul_iusztin.yaml  evaluating.yaml  feature_engineering.yaml  generate_instruct_datasets.yaml  generate_preference_datasets.yaml  training.yaml
data_crawling/: config.py  dispatcher.py  main.py
data_crawling/crawlers/: __init__.py  base.py  github.py  linkedin.py
data_crawling/db/: documents.py  mongo.py
data_ingestion/: cdc.py  config.py  db.py  mq.py  test_cdc.py
feature_pipeline/: config.py  db.py
feature_pipeline/data_flow/: stream_output.py
feature_pipeline/data_logic/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
feature_pipeline/finetuning/: file_handler.py  generate_data.py  llm_communication.py
feature_pipeline/llm/: prompt_templates.py
feature_pipeline/models/: base.py  clean.py  embedded_chunk.py
feature_pipeline/rag/: query_expansion.py  reranking.py  retriever.py  self_query.py
feature_pipeline/scripts/: bytewax_entrypoint.sh
feature_pipeline/utils/: __init__.py  chunking.py  cleaning.py  embeddings.py
llm_twin/: __init__.py  settings.py
llm_twin/application/crawlers/: base.py  custom_article.py  dispatcher.py  github.py  linkedin.py  medium.py
llm_twin/application/dataset/: generation.py  output_parsers.py  utils.py
llm_twin/application/networks/: embeddings.py
llm_twin/application/preprocessing/: chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_twin/application/preprocessing/operations/: chunking.py
llm_twin/application/utils/: split_user_full_name.py
llm_twin/domain/: __init__.py  dataset.py  documents.py  embedded_chunks.py
llm_twin/domain/base/: nosql.py  vector.py
llm_twin/infrastructure/aws/roles/: create_execution_role.py  create_sagemaker_role.py
llm_twin/infrastructure/db/: mongo.py  qdrant.py
llm_twin/model/evaluation/: evaluate.py  sagemaker.py
llm_twin/model/finetuning/: finetune.py  sagemaker.py
pipelines/: __init__.py  generate_datasets.py  training.py
steps/etl/: crawl_links.py  get_or_create_user.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py
steps/generate_datasets/: __init__.py  create_prompts.py  generate_instruction_dataset.py  generate_preference_dataset.py  push_to_huggingface.py  query_feature_store.py
steps/training/: train.py
tools/: run.py
