[tool.poetry]
name = "my-llm-twin"
version = "0.1.0"
description = ""
authors = ["Nnaemeka Ohakim <ohakim.nnaemeka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "4.22.0"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.7.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
aws-lambda-powertools = "^2.39.1"
structlog = "^24.2.0"
webdriver-manager = "^4.0.1"
pika = "^1.3.2"
python-dotenv = "^1.0.1"
bytewax = "^0.21.0"
qdrant-client = "^1.11.1"
langchain = "^0.3.0"
unstructured = "^0.15.12"
instructorembedding = "^1.0.1"
sentence-transformers = "^3.1.0"
openai = "^1.50.2"
comet-ml = "^3.47.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
