[tool.poetry]
name = "my-llm-twin"
version = "0.1.0"
description = ""
authors = ["Nnaemeka Ohakim <ohakim.nnaemeka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
selenium = "4.22.0"
beautifulsoup4 = "^4.12.3"
pymongo = "^4.7.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
aws-lambda-powertools = "^2.39.1"
structlog = "^24.2.0"
webdriver-manager = "^4.0.1"
pika = "^1.3.2"
python-dotenv = "^1.0.1"
bytewax = "^0.21.0"
qdrant-client = "^1.11.1"
langchain = "^0.3.0"
unstructured = "^0.15.12"
instructorembedding = "^1.0.1"
sentence-transformers = "^3.1.0"
openai = "^1.50.2"
comet-ml = "^3.47.0"
zenml = {extras = ["server"], version = "^0.70.0"}
loguru = "^0.7.2"
langchain-community = "^0.3.8"
chromedriver-autoinstaller = "^0.6.4"
html2text = "^2024.2.26"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest"
format = "black ."
start = "python main.py"

# Data pipelines
run-digital-data-etl-maxime = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
run-digital-data-etl-paul = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
run-digital-data-etl = [
    "run-digital-data-etl-maxime",
    "run-digital-data-etl-paul",
]
run-feature-engineering-pipeline = "poetry run python -m tools.run --no-cache --run-feature-engineering"

# Infrastructure
## Local infrastructure
local-docker-infrastructure-up = "docker compose up -d"
local-docker-infrastructure-down = "docker compose stop"
local-zenml-server-down = "poetry run zenml logout --local"
local-infrastructure-up = [
    "local-docker-infrastructure-up",
    "local-zenml-server-down",
    "local-zenml-server-up",
]
local-infrastructure-down = [
    "local-docker-infrastructure-down",
    "local-zenml-server-down",
]


local-zenml-server-up = "poetry run zenml login --local"